added volere for easy group work

--- a/Meilenstein1/STP_Abschlussbericht/Template.tex
+++ b/Meilenstein1/STP_Abschlussbericht/Template.tex
@@ -161,7 +161,11 @@ Betreuer: Dominik Gorgosch
 
 
 \chapter{Volere} % Load Data from File volere_template
-\input{src/volere_template}
+\input{src/login_volere}
+\input{src/aufgaben_volere}
+\input{src/admin_volere}
+\input{src/auswertung_volere}
+
 
 
 %---------------------------------------------------------
