--- a/Meilenstein1/STP_Abschlussbericht/src/admin_volere.tex
+++ b/Meilenstein1/STP_Abschlussbericht/src/admin_volere.tex
@@ -10,13 +10,13 @@
   \reqorig Lehrkraft
   \reqfit Erfüllt, wenn man für jeden Aufgabentyp alle oben genannten Operationen ausführen kann.
   \twoinline
-    {\reqsatis 5}
-    {\reqdissat 3}
+    {\reqsatis 2}
+    {\reqdissat 4}
   \twoinline
   {\reqdep -}
   {\reqconf -}
   \reqmater -
-  \reqhist 14.11.2022
+  \reqhist 14.11.2022 (erstellt) 
 \end{myreq}
 
 \begin{myreq}
@@ -29,13 +29,13 @@
   \reqorig Lehrkraft
   \reqfit Erfüllt, wenn man pro Aufgabe sieht, wie oft diese gelöst wurde und was die durchschnittliche Fehleranzahl ist.
   \twoinline
-    {\reqsatis 5}
-    {\reqdissat 3}
+    {\reqsatis 3}
+    {\reqdissat 2}
   \twoinline
   {\reqdep -}
   {\reqconf -}
   \reqmater -
-  \reqhist 14.11.2022
+  \reqhist 14.11.2022 (erstellt)
 \end{myreq}
 
 \begin{myreq}
@@ -48,8 +48,8 @@
   \reqorig Lehrkraft
   \reqfit Erfüllt, wenn man Benutzer suchen kann und pro Benutzer sieht wie viele Aufgaben schon gelöst wurden und welche durchschnittliche Fehlerquote dieser hat. Zusätzlich soll man für jede gelöste Aufgabe noch die Punktzahl und Eingabe des Benutzers sehen.
   \twoinline
-    {\reqsatis 5}
-    {\reqdissat 3}
+    {\reqsatis 2}
+    {\reqdissat 2}
   \twoinline
   {\reqdep -}
   {\reqconf -}
@@ -67,12 +67,12 @@
   \reqorig Lehrkraft
   \reqfit Ein Test mit mehreren Personen wurde durchgeführt. Dabei wurden alle täglichen Use-Cases abgedeckt und validiert, dass bei der Navigation und Benutzung keine größeren Probleme aufgetreten sind.
   \twoinline
-    {\reqsatis 3}
-    {\reqdissat 3}
+    {\reqsatis 1}
+    {\reqdissat 4}
   \twoinline
   {\reqdep -}
   {\reqconf -}
   \reqmater -
-  \reqhist 14.11.2022
+  \reqhist 14.11.2022 (erstellt)
 \end{myreq}
 
