--- a/Meilenstein1/STP_Abschlussbericht/src/auswertung_volere.tex
+++ b/Meilenstein1/STP_Abschlussbericht/src/auswertung_volere.tex
@@ -1,20 +1,66 @@
 %Quelle: https://tex.stackexchange.com/questions/515525/how-to-make-a-custom-requirement-card-like-voleres
 
 \begin{myreq}
-  \threeinline
-    {\reqno 75}
-    {\reqtype Funktional}
-    {\reqevent -}
-  \reqdesc description text description text description text 
-  \reqrat some more text some more text some more text 
-  \reqorig other text other text other text 
-  \reqfit longer text that needs more than one line longer text that needs more than one line
+  
+    \reqno 75
+    \reqtype nicht  funktionale anforderungung
+    \reqevent 7.9
+ 
+  \reqdesc Die Auswertungsdatein werden gesamelt.
+  \reqrat Die Benutzer können besser erfahren,welche fehler
+Sie gemacht haben.Das datenbank zeigt , wie viel Fehler
+Sie gemacht haben, und welche Aufgaben schwer oder einfach
+war.
+   
+  \reqorig 
+  \reqfit Achtzig prozent der lösungen zu den Aufgaben müssen gespeichert un angezeigt werden.
   \twoinline
-    {\reqsatis 5}
-    {\reqdissat 3}
-  \twoinline
-  {\reqdep some more text}
-  {\reqconf 111}
+    \reqsatis 5
+    \reqdissat 3
+  \reqdep 
+  \reqconf
   \reqmater other text other text other text 
-  \reqhist other text other text other text 
+  \reqhist 16.11.2022
+\end{myreq}
+
+
+\begin{myreq}
+  
+    \reqno 75
+    \reqtype funktionale anforderungung
+    \reqevent 7.9
+ 
+  \reqdesc Das system muss verschiedene Aufgabentypen auswerten.
+  \reqrat Das Aufgabensystem besteht aus verschiedene Aufgabentypen,
+die Jeweils einen einen speyiellen regeln zur
+auswertung benotigen
+  \reqorig 
+  \reqfit Sieben verschiedenen Aufgabenarten mussen bewertet werden.
+  \twoinline
+    \reqsatis 5
+    \reqdissat 3
+  \reqdep 
+  \reqconf
+  \reqmater other text other text other text 
+  \reqhist 16.11.2022
+\end{myreq}
+
+\begin{myreq}
+  
+    \reqno 75
+    \reqtype funktionale anforderungung
+    \reqevent 7.9
+ 
+  \reqdesc das system muss Java und Python emulieren
+  \reqrat alle Aufgaben Arten im Aufgabesystemteil testen die
+Java und python kenntnisse fur den benutzer
+  \reqorig 
+  \reqfit mindestens eine Aufgabentyp,der mit java oder python geschrieben wurde, sollte auswerten werden.
+  \twoinline
+    \reqsatis 5
+    \reqdissat 3
+  \reqdep 
+  \reqconf
+  \reqmater other text other text other text 
+  \reqhist 16.11.2022
 \end{myreq}
