monaco with javascript

--- a/Meilenstein1/STP_Abschlussbericht/Template.tex
+++ b/Meilenstein1/STP_Abschlussbericht/Template.tex
@@ -145,6 +145,9 @@ Wir bevorzugen Präsenztreffen, weil man leichter Kommunizieren kann. Da die Lat
 
 Außerdem haben wir festgestellt, dass wir sehr unterschiedliche Technik benutzen, was später beim aufsetzen der Entwicklungsumgebung berücksichtigt werden muss.
 
+\section*{Relevanz des Meilensteins}
+Die Ergebnisse des Meilensteins sind wichtig, um zu spezifizieren welche Themen bearbeitet werden müssen und wie das System sich verhalten soll. Außerdem helfen die Anforderungen bei der Priorisierung der Features.
+
 \section*{Wer hat was bearbeitet:}
 \begin{itemize}
 \item Leon: 3, 5, 10
