--- a/Meilenstein3/folien/main.tex
+++ b/Meilenstein3/folien/main.tex
@@ -8,7 +8,7 @@
 \usepackage{ifxetex}
 \usepackage{ifluatex}
 \ifxetex
-\usepackage[babelshorthands]{polyglossia}
+\usepackage[nbabelshorthands]{polyglossia}
 \setmainlanguage{german}
 \else\ifluatex
 \usepackage[babelshorthands]{polyglossia}
@@ -63,6 +63,7 @@
 \lstset{ %
   basicstyle=\footnotesize\ttfamily,        % size of fonts used for the code
   breaklines=true,                 % automatic line breaking only at whitespace
+  numbersep=5pt,  
   showstringspaces=false,
   captionpos=b,                    % sets the caption-position to bottom
   rulecolor=\color{fontColor},
@@ -182,7 +183,7 @@
 \item spring-security-test
 \item H2 in memory DB
 \end{itemize}
-\item Testabdeckung auf 82\% erhöhen
+\item Testabdeckung auf 93\% erhöhen
 \end{itemize}
 \end{frame}
 
